# biosnicar-py

./: .bumpversion.cfg  CHANGELOG.rst  pyproject.toml
biosnicar/rt_solvers/: adding_doubling_solver.py
notebooks/: radiative_transfer_fundamentals.ipynb
tests/: test_snicar.py
